# rasteryzer

./: .gitignore  3Dspace.c  3Dspace.h  CMakeLists.txt  MatrixMath.c  MatrixMath.h  README.md  camera.c  camera.h  draw.c  draw.h  window.c  window.h  windowbuffer.c  windowbuffer.h
window/: window.c  windowbuffer.c
